--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -15,34 +15,57 @@
         <h5 class="panel-title">Form @ViewBag.ActionType Purchase Order</h5>
     </header>
     <div class="panel-body">
-        <form class="form-horizontal">
-            @Html.HiddenFor(x => x.Id)
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NO_DO</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.ponumber, new { @class = "form-control", @id = "ponumber" })
+        <div class="row">
+            <div class="col-md-6">
+                @Html.HiddenFor(x => x.Id)
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NO_DO</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.ponumber, new { @class = "form-control", @id = "ponumber", @disabled = "disabled" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate", @disabled = "disabled" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">Proceed By</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.request_by, new { @class = "form-control", @id = "request_by", @disabled = "disabled" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">Source</label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" disabled="disabled"/>
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">PO ID</label>
-                <div class="col-md-4">
-                    <select class="form-control" id="PurchaseRequestId" name="PurchaseRequestId"></select>
+            <div class="col-md-6">
+                @Html.HiddenFor(x => x.Id)
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">No Pr</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "ponumber", @disabled = "disabled" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">Tanggal PR</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.prdate, new { @class = "form-control", @id = "podate", @disabled = "disabled" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="inputDefault">@Klinik.Resources.UIMessages.RequestBy</label>
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(x => x.prrequestby, new { @class = "form-control", @id = "request_by", @disabled = "disabled" })
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.RequestBy</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.request_by, new { @class = "form-control", @id = "request_by" })
-                </div>
-            </div>
-            <br />
-        </form>
+        </div>
+        <br />
     </div>
     <div class="panel-body">
         <div class="scrollTable">
@@ -50,7 +73,6 @@
                 <caption class="headertable">@Klinik.Resources.UIMessages.PurchaseOrderDetailList</caption>
                 <thead>
                     <tr>
-                        <th><input type="checkbox" class="checkall"></th>
                         <th hidden>Id Obat</th>
                         <th>Nama Obat</th>
                         <th>Total Pemakaian</th>
@@ -62,6 +84,7 @@
                         <th>Nama By HO</th>
                         <th>Qty By HP</th>
                         <th>Remark By HO</th>
+                        <th><input type="checkbox" class="checkall" disabled></th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -70,86 +93,88 @@
                     {
                         foreach (var item in Model.PurchaseOrderDetails)
                         {
-                            <tr>
-                                <td><input type="checkbox" value="@(item.Verified == true ? "true" : "false")" @(item.Verified == true ? "checked" : "")></td>
-                                <td hidden class="podetail">@item.Id</td>
-                                <td hidden>@item.ProductId</td>
-                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                <td><input type="text" class="form-control" value="@item.tot_pemakaian" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.nama_by_ho" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_by_ho" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
-                                <td>
-                                    <button class="edit-purchaseorderdetail btn btn-success btn-sm">Edit</button>
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                    <button class="btn btn-info btn-sm subtitusi">Subtitusi</button>
-                                </td>
-                            </tr>
+                    <tr>
+                        <td hidden class="podetail">@item.Id</td>
+                        <td hidden>@item.ProductId</td>
+                        <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                        <td><input type="text" class="form-control" value="@item.tot_pemakaian" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.nama_by_ho" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.qty_by_ho" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
+                        <td><input type="checkbox" value="@(item.Verified == true ? "true" : "false")" @(item.Verified == true ? "checked" : "") disabled></td>
+                        <td>
+                            <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseOrder/EditPurchaseOrderDetail" style="display:none;">Save</button>
+                            <button class="edit-purchaseorderdetail btn btn-success btn-sm">Edit</button>
+                            <button class="btn btn-danger btn-sm delete-purchaseorderdetail">Delete</button>
+                            <button class="btn btn-info btn-sm subtitusi">Subtitusi</button>
+                            <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                        </td>
+                    </tr>
                         }
                     }
                 </tbody>
             </table>
         </div>
-            <br />
-            <form id="purchaseorderdetail">
-                    <div class="form-group">
-                    <input type="text" hidden id="PurchaseOrderDetailId" />
-                    <input type="text" hidden id="ProductId" />
-                        <div class="row">
-                            <div class="col-md-3">
-                                <select id="namabarang" class="form-control"></select>
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" />
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" />
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="qty" id="qty" value="" />
-                            </div>
-                        </div>
+        <br />
+        <form id="purchaseorderdetail">
+            <div class="form-group">
+                <input type="text" hidden id="PurchaseOrderDetailId" />
+                <input type="text" hidden id="ProductId" />
+                <div class="row">
+                    <div class="col-md-3">
+                        <select id="namabarang" class="form-control"></select>
                     </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" />
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" />
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="total" id="total" value="" />
-                            </div>
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" />
-                            </div>
-                        </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" />
                     </div>
-                    <div class="form-group">
-                        <div class="row marginbutton">
-                            <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" />
-                            </div>
-                            <div class="col-md-9">
-                                <textarea type="text" class="namaobat form-control" placeholder="remark_by_ho" id="remark_by_ho"></textarea>
-                            </div>
-                        </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" />
                     </div>
-                    <footer class="col-md-12 text-right">
-                        <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
-                    </footer>
-            </form>
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="qty" id="qty" value="" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="total" id="total" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row marginbutton">
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" />
+                    </div>
+                    <div class="col-md-9">
+                        <textarea type="text" class="namaobat form-control" placeholder="remark_by_ho" id="remark_by_ho"></textarea>
+                    </div>
+                </div>
+            </div>
+            <footer class="col-md-12 text-right">
+                <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
             </footer>
-        </div>
+        </form>
+        <footer class="panel-footer">
+            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
+            <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+        </footer>
+    </div>
 </section>
 
 @section Scripts {
