--- a/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
@@ -14,40 +14,55 @@
         <h5 class="panel-title">Form @ViewBag.ActionType Delivery Order</h5>
     </header>
     <div class="panel-body">
-        <form class="form-horizontal">
-            @Html.HiddenFor(x => x.Id)
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NO_DO</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.donumber, new { @class = "form-control", @id = "donumber" })
-                </div>
+        @Html.HiddenFor(x => x.Id)
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NO_DO</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.donumber, new { @class = "form-control", @id = "donumber", @disabled = "disabled" })
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">PO ID</label>
-                <div class="col-md-4">
-                    <select class="form-control" id="ponumber" name="poid"></select>
-                </div>
+            <label class="col-md-2 control-label" for="inputDefault">No PO</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.ponumber, new { @class = "form-control", @id = "ponumber", @disabled = "disabled" })
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.dodate, new { @class = "form-control", @id = "dodate" })
-                </div>
+            <label class="col-md-2 control-label" for="inputDefault">No PR</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "prnumber", @disabled = "disabled" })
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.TujuanDO</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.dodest, new { @class = "form-control", @id = "dodest" })
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputDefault">Tanggal DO</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.dodate, new { @class = "form-control", @id = "dodate", @disabled = "disabled" })
             </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.ApprovedBY</label>
-                <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.approve_by, new { @class = "form-control", @id = "approve_by" })
-                </div>
+            <label class="col-md-2 control-label" for="inputDefault">Tanggal PO</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate", @disabled = "disabled" })
             </div>
-            <br />
-        </form>
+            <label class="col-md-2 control-label" for="inputDefault">Tanggal PR</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.prdate, new { @class = "form-control", @id = "prdate", @disabled = "disabled" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputDefault">Source</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.gudangasal, new { @class = "form-control", @id = "dodate", @disabled = "disabled" })
+            </div>
+            <label class="col-md-2 control-label" for="inputDefault">Process BY</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.processby, new { @class = "form-control", @id = "dodate", @disabled = "disabled" })
+            </div>
+            <label class="col-md-2 control-label" for="inputDefault">Request By</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.prrequestby, new { @class = "form-control", @id = "dodate", @disabled = "disabled" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="inputDefault">Send By</label>
+            <div class="col-md-2">
+                @Html.TextBoxFor(x => x.sendby, new { @class = "form-control", @id = "dodate", @disabled = "disabled" })
+            </div>
+        </div>
     </div>
     <div class="panel-body">
         <div class="scrollTable">
@@ -55,17 +70,13 @@
                 <caption class="headertable">@Klinik.Resources.UIMessages.DeliveryOrderDetailList</caption>
                 <thead>
                     <tr>
-                        <th hidden>Id Obat</th>
                         <th>Nama Obat</th>
-                        <th>Nama Gudang</th>
-                        <th>Nama Klinik</th>
-                        <th>Nama Brang PO</th>
-                        <th>Qty PO</th>
-                        <th>Qty PO Final</th>
-                        <th>Qty DO</th>
-                        <th>Remark DO</th>
-                        <th>Qty Adj</th>
-                        <th>Remark Adj</th>
+                        <th>Total Qty Request</th>
+                        <th>Nama By HO</th>
+                        <th> Qty By HP</th>
+                        <th>Remark By HO</th>
+                        <th>Qty Adjustment</th>
+                        <th>Remark Adjustment</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -77,17 +88,11 @@
                             <tr>
                                 <td hidden>@item.Id</td>
                                 <td hidden>@item.ProductId</td>
-                                <td hidden>@item.GudangId</td>
-                                <td hidden>@item.ClinicId</td>
-                                <td hidden>@item.ProductId_Po</td>
                                 <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                <td><select disabled="disabled"><option>@item.namagudang</option></select></td>
-                                <td><select disabled="disabled"><option>@item.namaklinik</option></select></td>
-                                <td><select disabled="disabled"><option>@item.namabarang_po</option></select></td>
-                                <td><input type="text" class="form-control" value="@item.qty_po" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_po_final" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_do" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.remark_do" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_request" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.nama_by_ho" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_by_HP" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
                                 <td><input type="text" class="form-control" value="@item.qty_adj" disabled="disabled" /></td>
                                 <td><input type="text" class="form-control" value="@item.remark_adj" disabled="disabled" /></td>
                                 <td hidden></td>
@@ -102,53 +107,50 @@
             </table>
         </div>
         <br />
-        <form id="deliveryorderdetail">
-            <div class="form-group">
-                <input type="text" hidden id="DeliveryOrderDetailId" />
-                <input type="text" hidden id="ProductId" />
-                <input type="text" hidden id="GudangId" />
-                <input type="text" hidden id="ClinicId" />
-                <input type="text" hidden id="ProductId_Po" />
-                <div class="row">
-                    <div class="col-md-3">
-                        <select id="namabarang" class="form-control"></select>
-                    </div>
-                    <div class="col-md-3">
-                        <select id="namagudang" class="form-control"></select>
-                    </div>
-                    <div class="col-md-3">
-                        <select id="namaklinik" class="form-control"></select>
-                    </div>
-                    <div class="col-md-3">
-                        <select id="namabarang_po" class="form-control"></select>
+        @*<form id="deliveryorderdetail">
+                <div class="form-group">
+                    <input type="text" hidden id="DeliveryOrderDetailId" />
+                    <input type="text" hidden id="ProductId" />
+                    <div class="row">
+                        <div class="col-md-3">
+                            <select id="namabarang" class="form-control"></select>
+                        </div>
+                        <div class="col-md-3">
+                            <select id="namagudang" class="form-control"></select>
+                        </div>
+                        <div class="col-md-3">
+                            <select id="namaklinik" class="form-control"></select>
+                        </div>
+                        <div class="col-md-3">
+                            <select id="namabarang_po" class="form-control"></select>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
+                        </div>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
-                <br />
-                <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
-            </div>
-            <footer class="col-md-12 text-right">
-                <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
-            </footer>
-        </form>
+                <div class="form-group">
+                    <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
+                    <br />
+                    <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
+                </div>
+                <footer class="col-md-12 text-right">
+                    <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
+                </footer>
+            </form>*@
         <footer class="panel-footer">
             <button type="submit" class="btn btn-primary saveorderdetail" data-parameterone="_deliveryorder" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/DeliveryOrder/CreateOrEditDeliveryOrder">@Klinik.Resources.UIMessages.Save</button>
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
